objects/Case.object
<CustomObject>
    <fields>
        <fullName>EUR_NIM_SalesOrderEU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order (EU)</label>
        <referenceTo>EUR_CRM_Sales_Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Contract_Date__c</fullName>
        <formula>LAT_Contract__r.EndDate__c</formula>
        <label>End Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_de_Fatura__c</fullName>
        <formula>Account.Revenue_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End de Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_description__c</fullName>
        <formula>Grouping_Fiscal_Year__r.Ano_Fiscal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year (description)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gerente_regional_KAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente regional / KAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grouping_Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping Fiscal Year</label>
        <referenceTo>Agrupamento_Fiscal_Year__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inquiry_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inquiry Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <description>Campo apenas para integração</description>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aguardando Resposta</fullName>
                </value>
                <value>
                    <fullName>Reservado</fullName>
                </value>
                <value>
                    <fullName>Erro de integração</fullName>
                </value>
                <value>
                    <fullName>Não possui Saldo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_APStep__c</fullName>
        <label>AP Step</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_BR_RealValidityDate__c</fullName>
        <label>Real Validity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT_Contract</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Demandas</relationshipLabel>
        <relationshipName>Demandas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CCManagerOrExecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is hidden for the user and is completed by the trigger &apos;LAT_MX_CaseBeforeInsert&apos; everytime a record is inserted and is used for the Approval Process. If the Record Type of the record is &apos;LAT_MX_CSE_AccountAlterationCreditAndCollections&apos; and the Case Reason is &apos;Registration deposit cash payment&apos; and the Account related to the Case has a user in the field &apos;LAT_MX_CreditAndCollectionsExecutive__c&apos; this user is copied to this field. If the Case Reason is &apos;Payment Term Modification&apos; depending on the Channel of the Account related to the record this field is completed with the Manager of &apos;Miguel Vega&apos; or &apos;Veronica Morales&apos;.</description>
        <label>C&amp;C Manager or Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recebe o gerente do usuário (proprietário) para utilização no envio de email de alerta. Campo copiado pela trigger CasoCopiaIdGerenteRegionalArea.</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Casos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>N_de_Faturamento__c</fullName>
        <formula>Account.Revenue_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº de Faturamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_signatories__c</fullName>
        <label>Note Signatories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Area__c</fullName>
        <label>Occurrence Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financeiro</fullName>
                </value>
                <value>
                    <fullName>Logística</fullName>
                </value>
                <value>
                    <fullName>Outra</fullName>
                </value>
                <value>
                    <fullName>Produto</fullName>
                </value>
                <value>
                    <fullName>Vendas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occurrence_Type__c</fullName>
        <label>Occurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Occurrence_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agend. / reagend. de entrega</fullName>
                </value>
                <value>
                    <fullName>Paletização errada</fullName>
                </value>
                <value>
                    <fullName>Pos. coleta devolução mercadoria</fullName>
                </value>
                <value>
                    <fullName>Atraso na entrega</fullName>
                </value>
                <value>
                    <fullName>Infos. sobre a previsão de entrega</fullName>
                </value>
                <value>
                    <fullName>Mercadoria faltante</fullName>
                </value>
                <value>
                    <fullName>Mercadoria/embalagem danificada</fullName>
                </value>
                <value>
                    <fullName>Recusa de recebimento</fullName>
                </value>
                <value>
                    <fullName>Infos. crédito efetuado conta cliente</fullName>
                </value>
                <value>
                    <fullName>Previsão de pagamento de verbas</fullName>
                </value>
                <value>
                    <fullName>Boleto indevido (NF devolvida)</fullName>
                </value>
                <value>
                    <fullName>Cálculo indevido no preço da NF</fullName>
                </value>
                <value>
                    <fullName>Não recebimento de boleto / 2ª via</fullName>
                </value>
                <value>
                    <fullName>Prorrogação prazo (Atraso na entrega)</fullName>
                </value>
                <value>
                    <fullName>Prorrogação prazo (Negociação)</fullName>
                </value>
                <value>
                    <fullName>Contato c/ área de Vendas p/ compra</fullName>
                </value>
                <value>
                    <fullName>Solicitação contrato de parceria</fullName>
                </value>
                <value>
                    <fullName>Solicitação devolução de mercadoria</fullName>
                </value>
                <value>
                    <fullName>Solicitação de patrocínio de eventos</fullName>
                </value>
                <value>
                    <fullName>Atend. / falta atend. área de vendas</fullName>
                </value>
                <value>
                    <fullName>Atendimento do Promotor</fullName>
                </value>
                <value>
                    <fullName>Atraso no envio de bonificações</fullName>
                </value>
                <value>
                    <fullName>Atraso no pagamento de verbas</fullName>
                </value>
                <value>
                    <fullName>Comportamento da Demonstradora</fullName>
                </value>
                <value>
                    <fullName>Falta material promoc. / sol. / prob.</fullName>
                </value>
                <value>
                    <fullName>Questionamento da política comercial</fullName>
                </value>
                <value>
                    <fullName>Descaminho</fullName>
                </value>
                <value>
                    <fullName>Qualidade</fullName>
                </value>
                <value>
                    <fullName>Suspeita de falsificação</fullName>
                </value>
                <value>
                    <fullName>Outras Solicitações</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <label>Other - Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presentation__c</fullName>
        <label>Presentation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purposes_Action__c</fullName>
        <label>Purposes Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aniversário</fullName>
                </value>
                <value>
                    <fullName>Ativação</fullName>
                </value>
                <value>
                    <fullName>Condições Comerciais</fullName>
                </value>
                <value>
                    <fullName>Enxoval</fullName>
                </value>
                <value>
                    <fullName>Estrutural</fullName>
                </value>
                <value>
                    <fullName>Incentivos a clientes</fullName>
                </value>
                <value>
                    <fullName>Introdução a novos produtos</fullName>
                </value>
                <value>
                    <fullName>KA - Contratos</fullName>
                </value>
                <value>
                    <fullName>Materiais</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação + Materiais Taylor Made</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação + Material POS</fullName>
                </value>
                <value>
                    <fullName>On Trade - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos - Ativação</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos - material</fullName>
                </value>
                <value>
                    <fullName>Ponto Extra</fullName>
                </value>
                <value>
                    <fullName>Promoção de preço a consumidor</fullName>
                </value>
                <value>
                    <fullName>Promotoras</fullName>
                </value>
                <value>
                    <fullName>Tabloides</fullName>
                </value>
                <value>
                    <fullName>Treinamento</fullName>
                </value>
                <value>
                    <fullName>Value Added Packs (VAP)</fullName>
                </value>
                <value>
                    <fullName>Visibilidade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <inlineHelpText>Informar a justificativa de inadimplência para que seja encaminhada à área responsável.</inlineHelpText>
        <label>Rationale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abatimento de contrato não registrado</fullName>
                </value>
                <value>
                    <fullName>Abatimento parcial de devolução</fullName>
                </value>
                <value>
                    <fullName>Atraso na entrega</fullName>
                </value>
                <value>
                    <fullName>Cliente com verba de contrato a receber</fullName>
                </value>
                <value>
                    <fullName>Condição de pagamento incorreta</fullName>
                </value>
                <value>
                    <fullName>Devolução total sem ADM</fullName>
                </value>
                <value>
                    <fullName>Diferença de preço na NF</fullName>
                </value>
                <value>
                    <fullName>Não recebimento do boleto</fullName>
                </value>
                <value>
                    <fullName>Negociação c/ data prevista pagamento</fullName>
                </value>
                <value>
                    <fullName>Título já pago</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Dissatisfaction__c</fullName>
        <label>Reason for Dissatisfaction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_not_approved__c</fullName>
        <label>Reason for not approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desacordo em relação às contrapartidas</fullName>
                </value>
                <value>
                    <fullName>Desacordo aos Acordos Comerciais definidos</fullName>
                </value>
                <value>
                    <fullName>Existência de estoque no cliente</fullName>
                </value>
                <value>
                    <fullName>Fechamento de contrato com a concorrência</fullName>
                </value>
                <value>
                    <fullName>Oferta não condizente com dívida</fullName>
                </value>
                <value>
                    <fullName>Proposta melhor da concorrência</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Insatisfação com o contrato atual</fullName>
                </value>
                <value>
                    <fullName>Desacordo em relação às contrapartidas (informar qual contrapartida)</fullName>
                </value>
                <value>
                    <fullName>Desacordo em relação aos Acordos Comerciais estabelecidos</fullName>
                </value>
                <value>
                    <fullName>Valor ou prazo não compatível ao valor em aberto</fullName>
                </value>
                <value>
                    <fullName>Situação de mercado do cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_not_approved_an_extension__c</fullName>
        <label>Reason for not approved an extension</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_not_approved_text__c</fullName>
        <label>Reason for not approved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Casos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Time_days__c</fullName>
        <formula>ClosedDate - CreatedDate</formula>
        <label>Registration Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Proposal</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Casos (Proposta de renovação)</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Proposal_formula__c</fullName>
        <formula>HYPERLINK(Parent.Renewal_Proposal__r.Id,  Parent.LAT_Contract__c )</formula>
        <label>Renewal Proposal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_securities_registry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send securities registry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_of_termination_Date_Customer__c</fullName>
        <label>Signature of termination Date - Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <formula>IF ( ISPICKVAL( Amount_Type__c , &quot;Allowance&quot;), &quot;SCV&quot; 
,IF ( ISPICKVAL( Amount_Type__c , &quot;KA - Verba preço promocionado&quot;) , &quot;SCV&quot; 
,IF ( ISPICKVAL( Amount_Type__c , &quot;KA Contratos&quot;), &quot;SCV&quot; 
,IF ( ISPICKVAL( Amount_Type__c ,  &quot;On trade - Verba venda direta&quot;), &quot;SCV&quot; 
,IF ( ISPICKVAL( Amount_Type__c ,  &quot;Bonificação&quot;), &quot;SCV&quot; ,  &quot;ME&quot;)))))</formula>
        <label>System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Company_Signatory_2__c</fullName>
        <label>Termination Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Company_Signatory__c</fullName>
        <label>Termination Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Customer_Signatory_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Termination Customer Signatory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Casos (Distrato - Signatário do cliente)</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termination_Customer_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Termination Customer Signatory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Casos (Distrato - Signatário do cliente)</relationshipLabel>
        <relationshipName>Demandas3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termination_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_delivered_p_subscribe_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination delivered subscribe client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_filed_by_regional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination filed by regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_signed_by_the_board__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination signed by the board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_signed_by_the_coordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination signed by the coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_signed_by_the_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination signed by the customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_signed_by_the_manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination signed by the manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>Grouping_Fiscal_Year__r.valor_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UF_Fatura__c</fullName>
        <formula>Account.Revenue_UF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UF Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Traded__c</fullName>
        <label>Value Traded</label>
        <summarizedField>Parcela__c.Valor_da_parcela__c</summarizedField>
        <summaryForeignKey>Parcela__c.Demanda__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Value_due__c</fullName>
        <label>Value due</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verification__c</fullName>
        <label>Verification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Type__c</fullName>
        <label>WF Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AR_Casos_Abiertos_Modif_Clientes</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.REASON</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CSE_1_AccountAlteration_ARG</value>
        </filters>
        <label>AR Casos Abiertos Modif. Clientes</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinates>AR_Director_de_Administraci_n_y_Finanzas</roleAndSubordinates>
            <roleAndSubordinates>AR_Director_de_Ventas_Canal_Directo</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_Trade_Marketing</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_de_Administracion_y_Finanzas</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_de_Ventas_SPM_e_Interior</roleAndSubordinates>
            <roleAndSubordinates>AR_Inteligencia_Comercial</roleAndSubordinates>
            <roleAndSubordinates>AR_Logistica</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Casos_Cerrados_Modif_Clientes</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.REASON</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CSE_1_AccountAlteration_ARG</value>
        </filters>
        <label>AR Casos Cerrados Modif. Clientes</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinates>AR_Director_de_Administraci_n_y_Finanzas</roleAndSubordinates>
            <roleAndSubordinates>AR_Director_de_Ventas_Canal_Directo</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_Trade_Marketing</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_de_Administracion_y_Finanzas</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_de_Ventas_SPM_e_Interior</roleAndSubordinates>
            <roleAndSubordinates>AR_Inteligencia_Comercial</roleAndSubordinates>
            <roleAndSubordinates>AR_Logistica</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Todas Demandas Abertas</label>
    </listViews>
    <listViews>
        <fullName>Credito_Cobranca_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Area_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <filterScope>Queue</filterScope>
        <label>Credito e Cobranca Todos</label>
        <queue>Credito_e_Cobranca</queue>
        <sharedTo>
            <group>Credito_e_cobran_a</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credito_Cobranca_Fechados</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Area_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Credito e Cobranca Fechados</label>
        <queue>Credito_e_Cobranca</queue>
        <sharedTo>
            <group>Credito_e_cobran_a</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credito_Cobranca_Pendentes</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Area_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>UF_Fatura__c</columns>
        <columns>Financial_Approval__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Credito e Cobranca Pendentes</label>
        <language>pt_BR</language>
        <queue>Credito_e_Cobranca</queue>
        <sharedTo>
            <group>Credito_e_cobran_a</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Area_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>,Em análise - Customer Service,Análise pendente</value>
        </filters>
        <label>Customer Service Pendente</label>
        <language>en_US</language>
        <queue>Customer_service</queue>
        <sharedTo>
            <group>Customer_service</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Area_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <filterScope>Queue</filterScope>
        <label>Customer Service Todos</label>
        <queue>Customer_service</queue>
        <sharedTo>
            <group>Customer_service</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_Finalizado</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Area_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customer Service Finalizado</label>
        <queue>Customer_service</queue>
        <sharedTo>
            <group>Customer_service</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
</CustomObject>